[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/tooltipBackground.png" type="Texture" id=1]
[ext_resource path="res://Tooltip.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/roboto-regular-16.tres" type="DynamicFont" id=3]

[node name="Tooltip" type="Popup"]
margin_right = 225.0
margin_bottom = 375.0
rect_min_size = Vector2( 225, 375 )
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 210.0
margin_bottom = 360.0
mouse_filter = 2
custom_constants/separation = 8

[node name="ItemName" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_right = 195.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "{Item name}"
align = 1
valign = 1

[node name="ItemType" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 195.0
margin_bottom = 46.0
text = "{Item type}"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat1" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 195.0
margin_bottom = 73.0
mouse_filter = 2

[node name="Stat" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat1"]
margin_bottom = 19.0
valign = 1

[node name="difference" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat1"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 19.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat2" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 195.0
margin_bottom = 100.0
mouse_filter = 2

[node name="Stat" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat2"]
margin_bottom = 19.0
valign = 1

[node name="difference" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat2"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 19.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat3" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 195.0
margin_bottom = 127.0
mouse_filter = 2

[node name="Stat" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat3"]
margin_bottom = 19.0
valign = 1

[node name="difference" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat3"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 19.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat4" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 195.0
margin_bottom = 154.0
mouse_filter = 2

[node name="Stat" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat4"]
margin_bottom = 19.0
valign = 1

[node name="difference" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat4"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 19.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat5" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 195.0
margin_bottom = 181.0
mouse_filter = 2

[node name="Stat" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat5"]
margin_bottom = 19.0
valign = 1

[node name="difference" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat5"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 19.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat6" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 189.0
margin_right = 195.0
margin_bottom = 208.0
mouse_filter = 2

[node name="Stat" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat6"]
margin_bottom = 19.0
valign = 1

[node name="difference" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat6"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 19.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat7" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 195.0
margin_bottom = 235.0
mouse_filter = 2

[node name="Stat" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat7"]
margin_bottom = 19.0
valign = 1

[node name="difference" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat7"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 19.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat8" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 195.0
margin_bottom = 262.0
mouse_filter = 2

[node name="Stat" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat8"]
margin_bottom = 19.0
valign = 1

[node name="difference" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat8"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 19.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat9" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 195.0
margin_bottom = 289.0
mouse_filter = 2

[node name="Stat" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat9"]
margin_bottom = 19.0
valign = 1

[node name="difference" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat9"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 19.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat10" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 297.0
margin_right = 195.0
margin_bottom = 316.0
mouse_filter = 2

[node name="Stat" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat10"]
margin_bottom = 19.0
valign = 1

[node name="difference" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat10"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 19.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat11" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 324.0
margin_right = 195.0
margin_bottom = 343.0
mouse_filter = 2

[node name="Stat" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat11"]
margin_bottom = 19.0
valign = 1

[node name="difference" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stat11"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 19.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
